--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_PORT=465 
-EMAIL_USERNAME=74607ecf6c694d
-EMAIL_PASSWORD=ca7e806235f0e0
+EMAIL_PORT=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
